@@ -1,5 +1,11 @@
 2006-07-17 Joerg Wunsch <j@uriah.heep.sax.de>
 
+	* stk500v2.c: Fix all bugs in stk500pp.  Eliminate pagebuf, and
+	use a stack-allocated buffer instead, as the pagesize can be at
+	most 256 for all current AVRs anyway.
+
+2006-07-17 Joerg Wunsch <j@uriah.heep.sax.de>
+
 	* main.c: Use mem->desc in place of upd->memtype in more places to
 	give the full name of the respective memory area, instead of
 	the (possibly abbreviated) name the user typed in the -U option.
